[package]
name = "lemmy-scheduled-post-bot"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
lemmy-client = "1.0.2"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full", "macros", "tokio-macros"] }
toml = "0.8.19"
