[package]
name = "lemmy-scheduled-post-bot"
description = "Make posts to Lemmy based on the next configured post in a TOML file"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Steven Vergenz <1882376+stevenvergenz@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/stevenvergenz/lemmy-scheduled-post-bot"
keywords = ["lemmy"]
categories = ["command-line-utilities"]

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
lemmy-client = "1.0.2"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full", "macros", "tokio-macros"] }
toml = "0.8.19"
